# oh-my-litecode

./: .eslintrc.json  .gitignore  00_HANDOFF.md  AI-CLI-EXTENSIONS.md  CHANGELOG.md  ENHANCEMENT-REPORT.md  IMPLEMENTATION-SUMMARY.md  INSTALL-OML.md  Makefile  OML-PLUGINS.md  QUICKSTART.md  QWEN.md  README-ARCH-QWENX.md  README-OML.md  README.md  oml  package-lock.json  package.json  tsconfig.json  turbo.json
.ai/system/: ai-ltc-config.json
.github/workflows/: build.yml  test.yml
.oml/sessions/: session-1774235824612-9bafa7e85fbd9bc1.json  session-1774235824615-66a4eda4dbaaebb6.json  session-1774235824620-a193eb07f7a07f6f.json  session-1774235824620-c0a3c30b05a1960d.json  session-1774235824622-04a192d4aea6e978.json  session-1774235824624-bdf7d183a92fcd33.json  session-1774235824627-6399c98ac074fc05.json  session-1774235824628-cf561d34073d10df.json  session-1774235824630-3464ee8a78f37ea6.json  session-1774235824630-49ed0dfa518912c0.json  session-1774235824634-222669dfb3ca8a04.json  session-1774235824639-9386ffd8eb02623f.json  session-1774235923540-ae4586a1c7ad4cf4.json  session-1774235923543-dc2fafaa6eeaa2b0.json  (+76 more)
aider/: README.md
archive/: ARCHIVE-MANIFEST.md
benchmarks/: PERFORMANCE-ANALYSIS.md  README.md  benchmark-pool.sh  benchmark-session.sh  benchmark-system.sh
claude/: README.md
codex/: README.md
core/: event-bus.sh  fakehome-fix.sh  hooks-registry.sh  platform.sh  plugin-loader.sh  pool-concurrency.sh  pool-manager.sh  pool-monitor.sh  pool-queue.sh  pool-recovery.sh  session-diff.sh  session-fork.sh  session-manager.sh  session-search.sh  session-share.sh  session-storage.sh
docs/: AGENT-TASKS-DELEGATION.md  AI-DEPLOY-PROMPT.md  AI-LTC-ARCHITECTURE-AUDIT-2026-03-26.md  AI-LTC-ARCHITECTURE-AUDIT-2026-03-27.md  AI-LTC-BRIDGE-ROADMAP.md  AI-LTC-INTEGRATION-PLAN.md  ARCH-DEPLOY-GUIDE.md  ARCH-QWENX-REDEPLOY-PROMPT.md  ARCHITECTURE-MONITORING.md  ARCHIVE-EVALUATION.md  BASH-ARCHIVE-REPORT.md  COMPLETE-BASH-MIGRATION-PLAN.md  COMPLETE-IMPLEMENTATION-SUMMARY.md  CORE-FEATURES-TODO.md  CROSS-CLI-ADAPTER-ARCHITECTURE.md  DEEP-IMPLEMENTATION-PROGRESS.md  DEPLOYMENT-GUIDE.md  DESIGN-DOCUMENTS-INDEX.md  FAKEHOME-STRATEGY.md  FINAL-COMPLETE-SUMMARY.md  FINAL-DEEP-IMPLEMENTATION-SUMMARY.md  FINAL-IMPLEMENTATION-SUMMARY.md  FINAL-REPORT.md  GRAND-FINALE-SUMMARY.md  GREP-APP-CONSISTENCY-CHECK.md  GREP-APP-DATABASE-SELECTION.md  GREP-APP-ENHANCED-IMPLEMENTATION.md  GREP-APP-ENHANCEMENT-V2.md  GREP-APP-ENHANCEMENT-V3.md  GREP-APP-EVALUATION.md  GREP-APP-GITHUB-ENHANCEMENT-PROPOSAL.md  GREP-APP-ORIGIN-CLARIFICATION.md  HOOKS-GUIDE.md  IMPLEMENTATION-PROGRESS.md  IMPLEMENTATION-SUMMARY.md  INSTALL-GUIDE.md  LOCAL-UPDATE-SUMMARY.md  MCP-UPSTREAM-STRATEGY.md  MIGRATION-CONSTITUTION.md  MIGRATION-STATUS-2026-03-27.md  (+43 more)
forgecode/: README.md
gemini/: README.md
hotfix/: launcher-tty-cleanup.sh
lib/: android-perms.sh  package-manager.sh  system-detect.sh
modules/: auto-backup.sh  cloud-sync-full.sh  cloud-sync.sh  conflict-resolver.sh  incremental-update.sh  offline-mode.sh  parallel-downloader.sh  perf-tools.sh  qwen-deploy.sh  tui-theme-manager.sh
opencode/: README.md
plugins/agents/plan/: plugin.json  pyproject.toml
plugins/agents/plan/hooks/: plan-notification.sh  plan-tracker.sh
plugins/agents/plan/scripts/: post-install.sh
plugins/agents/plan/src/plan_agent/: __init__.py
plugins/agents/plan/tests/: test_plan.py
plugins/mcps/grep-app/: README.md  plugin.json  pyproject.toml
plugins/mcps/grep-app-enhanced/: .coverage  README.md  pyproject.toml
plugins/mcps/grep-app-enhanced/scripts/: test-connection.sh
plugins/mcps/grep-app-enhanced/src/grep_app_enhanced.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
plugins/mcps/grep-app-enhanced/src/grep_app_enhanced/database/: __init__.py  cache_manager.py  compressed_db.py
plugins/mcps/grep-app-enhanced/src/grep_app_enhanced/remote/: __init__.py  crawler.py  gh_cli.py
plugins/mcps/grep-app-enhanced/src/grep_app_enhanced/search/: __init__.py  intelligent_fallback.py  remote_search.py
plugins/mcps/grep-app-enhanced/tests/: test_database.py  test_database_enhanced.py  test_pathway_manager.py  test_remote.py  test_search.py
plugins/mcps/grep-app/scripts/: post-install.sh  pre-uninstall.sh  test-grep-app.sh
plugins/mcps/grep-app/src/grep_app_mcp/: __init__.py
plugins/mcps/grep-app/tests/: test_grep_app.py
prompts/: 01-execution-start.md  gpt-bootstrap-architect.prompt.md  gpt-corrective-strategist.prompt.md  gpt-optimizer-auditor.prompt.md  qwen-generalist-autopilot.prompt.md  qwen-init-routing.prompt.md  qwen-supervisory-generalist.prompt.md  shared-repo-contract.prompt.md
qwen/: README.md
scripts/: check-architecture-contract.mjs  check-bridge-version.mjs  cleanup-fakehome.sh  deploy-bridge.sh  install-archlinux.sh  install-gnulinux.sh  migrate-to-ts.sh  packaging-common.sh  update-qwenx.sh  verify-version.sh
src/: ARCHIVED.md  README.md
templates/: 00_HANDOFF.template.md  AI-LTC-INIT-QUESTIONNAIRE.template.md  ESCALATION_REQUEST.template.md  human-addendum.template.md
tests/: platform.test.ts  plugin-loader.test.ts  pool-manager.test.ts  run-tests.sh  session-manager.test.ts  test-pool.sh  test-session.sh
tools/: healthcheck.sh  remote-build.sh  wait-and-build.sh
(+335 files in other folders)
